# taskable

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  bootstrap.py  build.sh  learnings.md  pytest.ini  render.yaml
api/: auth.py  config.py  database.py  dependencies.py  events.py  main.py  pytest.ini  requirements.txt  schemas.py  version.py
api/models/: __init__.py  entities.py  enums.py
api/routes/: agent.py  apikeys.py  auth.py  comments.py  events.py  knowledge.py  projects.py  proposals.py  sessions.py  subprojects.py  tickets.py
api/tests/: conftest.py  test_agent.py  test_auth_proxy.py  test_coord_primitives.py  test_crud.py  test_delete.py  test_knowledge.py  test_mcp_simulator.py  test_sse.py  test_state_transitions.py
api/utils/: context_trails.py  ticket_deps.py  time.py
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
docs/: api_endpoints.md  client_server.md  db_schema.md  deployment.md  folder_navigation.md  frontend.md  index.md  mcp.md  prd.md  product_evolution.md  protocol.md  testing.md
mcp/: README.md  mcp.json.example  mcp_server.py  pyproject.toml  requirements.txt
scripts/: seed_demo.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/.tsbuild/node/: tsconfig.node.tsbuildinfo
web/src/: App.js  App.tsx  index.css  types.js  types.ts
web/src/components/: AppLayout.js  AppLayout.tsx  CommentThread.js  CommentThread.tsx  KanbanBoard.js  KanbanBoard.tsx  KnowledgePanel.js  KnowledgePanel.tsx  LoginPage.tsx  McpSetupModal.tsx  MetadataPane.js  MetadataPane.tsx  ProfilePage.tsx  Sidebar.js  Sidebar.tsx  (+8 more)
web/tests/: realtime.spec.ts
(+27 files in other folders)
